--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -79,55 +79,79 @@ label.equipment = Supplies Gruppe
 label.notification = Communication
 label.IndividualEquipment=Individuelle Ausstattung
 label.ManageParticipants=Mitglieder verwalten
-label.updateParticipant=Update Participant
-label.Participants=Deelnemers
-label.loginError=Login Failed
-label.invite=Invite
-label.ManageStoppingPoints=Manage stopping points
-label.login=Please Login
-label.SaveSettings=Save settings
-label.showMap=Show map
-label.ModeOfTravel=Mode of travel
-label.LocationName=Location name
-label.badMapEntry=Invalid entry\: this place doesn't excist\!
-label.Driving=Driving
-label.Walking=Walking
-label.Bicycling=Bicycling
-label.Transit=Transit
-label.information=Information
-label.goodMapEntry=Good entry, this place excists\!
-label.showRoute=Show route
-label.StoppingPointName=Stoppingpoint name
-label.StoppingPointType=Stoppingpoint type
-label.StoppingPointInfo=Stopping point info
-label.MyOrganisedTrips=My organised trips
-label.MyJoinedTrips=My joined trips
-label.FoundOnTripName=Found on trip name
-label.FoundOnTripCategory=Found on trip category
-label.Manage=Manage
-label.ManageCategories=Manage categories
-label.photo=Photo
-label.Background=Background
-label.FontTitle=Font title
-label.FontContent=Font content
-label.NoTripNamesFound=Found no trips with name
-label.NoTripCategoriesFound=Found no trips with category
-label.NoTripsAvailable=There are currently no trips in our database, feel free to add a trip\!
-label.NoOrganisedTripsAvailable=You have no organised trips\!
-label.NoParticipatedTripsAvailable=You haven't participated any trips\!
-label.LoginDataIncorrect=The login information you have given is incorrect\!
-label.YouMustBeLoggedIn=You must be logged in to visit this page
-label.NotRegistered=Not registered?
-label.RegisterHere=Register here\!
-label.Vraag=Question
-label.Antwoord=Answer
-label.CorrectAntwoord=Correct Answer
-label.Antwoorden=Answers
-label.sendMail=Send mail
-label.skipMail=Skip
-label.viewTheTrip=For more information visit the trip
-label.tripVisible=Trip visible in search
-label.tripAdd=Add
-label.removeSelected=Remove selected
-label.Tweet=Tweet
+label.updateParticipant = Update Teilnehmer
+label.Participants = Teilnehmer
+label.loginError = Login fehlgeschlagen
+label.invite = Kriterien
+label.ManageStoppingPoints = Verwalten Haltepunkte
+label.login = Bitte loggen Sie sich
+label.showMap = Karte anzeigen
+label.SaveSettings = Einstellungen speichern
+label.ModeOfTravel = Modus des Reisens
+label.LocationName = Ortsname
+label.badMapEntry = Ung&uuml;ltige Eingabe\: dieser Ort nicht excist\!
+label.Driving = Fahren
+label.Walking = Wandern
+label.Bicycling = Bicycling
+label.Transit = Transit
+label.information = Information
+label.goodMapEntry = Gut Eintrag, dieser Ort excists\!
+label.showRoute = Route anzeigen
+label.StoppingPointName = Stoppingpoint Namen
+label.StoppingPointType = Stoppingpoint Art
+label.StoppingPointInfo = Haltepunkt info
+label.MyOrganisedTrips = Meine organisierte Ausfl&uuml;ge
+label.MyJoinedTrips = My beigetreten Reisen
+label.FoundOnTripName = on trip Namen gefunden
+label.FoundOnTripCategory = on trip Kategorie gefunden
+label.Manage = Manage
+label.ManageCategories = Kategorien verwalten
+label.photo = Photo
+label.Background = Hintergrund
+label.FontTitle = Font Titel
+label.FontContent = Font Inhalte
+label.NoTripNamesFound = Gefunden keine Fahrten mit dem Namen
+label.NoTripCategoriesFound = Gefunden keine Fahrten mit der Kategorie
+label.NoTripsAvailable = Derzeit gibt es keine Ausfl&uuml;ge in unserer Datenbank, f&uuml;hlen Sie sich frei, um eine Reise add!
+label.NoOrganisedTripsAvailable = Sie haben keine organisierte Ausfl&uuml;ge\!
+label.NoParticipatedTripsAvailable = Sie haben keine Fahrten teilgenommen\!
+label.LoginDataIncorrect = Der Login-Informationen, die Sie gegeben haben, ist nicht korrekt\!
+label.YouMustBeLoggedIn = Sie m&uuml;ssen angemeldet sein, um diese Seite besuchen
+label.NotRegistered = Noch nicht registriert?
+label.RegisterHere = Hier registrieren\!
+label.Vraag = Frage
+label.Antwoord = Antwort
+label.CorrectAntwoord = Richtige Antwort
+label.Antwoorden = Antworten
+label.sendMail = Send mail
+label.skipMail = &uuml;berspringen
+label.viewTheTrip = F&uuml;r weitere Informationen besuchen Sie die Reise
+label.tripVisible = Trip sichtbar auf der Suche
+label.tripAdd = Hinzuf&uuml;gen
+label.removeSelected = Auswahl entfernen
+label.Tweet = Tweet
+label.HomeLine1 = Sie wollen eine Reise so schnell wie m&ouml;glich zu gestalten?
+label.HomeLine2 = Oder sind Sie auf der Suche nach einer lustigen Reise mit Ihren Freunden?
+label.HomeLine3 = Dann ist dies der Ort, den Sie suchen. Hier finden Sie alle Arten von Spa&szlig; Ausfl&uuml;ge. St&auml;dtereisen, Kot, Wanderungen, .. Sie sind leicht zu finden und sofort mit der richtigen Information. Wir bieten auch die M&ouml;glichkeit, Ihre eigene Reise organisieren. Mit nur wenigen Klicks haben Sie schon Ihre eigene Reise, f&uuml;r die Sie alle Ihre Freunde einladen k&ouml;nnen.
+label.HomeLine4 = W&auml;hrend der Reise, haben Sie die M&ouml;glichkeit, Ihr Mobiltelefon verwenden, um den richtigen Weg zu folgen. Sie k&ouml;nnen auch mit anderen Teilnehmern der Reise zu kommunizieren. Wir bieten auch Spa&szlig; Interaktion mit Fotos und Quizfragen.
+label.HomeLine5 = Schlie&szlig;lich machen wir das l&auml;stige Kalkulation am Ende der Reise viel einfacher, indem es einen Dienst wurden k&ouml;nnen Sie Ihre Ausgaben w&auml;hrend der Reise geben und Ihnen einen vollst&auml;ndigen &uuml;berblick &uuml;ber Sie Kosten am Ende der Reise, so wird es keine Probleme am Ende \ sein!
+label.AboutLine1 = Als Senior Studenten Karel de Grote Hogeschool mussten wir einen Auftrag f&uuml;r die Software-Entwicklung nat&uuml;rlich entwickeln. Wir mussten einen WebClient und einen mobilen Client zu entwickeln. Um diese Zuweisung abzuschlie&szlig;en gab es ein paar Aspekte sehr wichtig. Wir mussten test-driven, etwas v&ouml;llig Neues f&uuml;r uns arbeiten. Abgesehen davon, war Teamarbeit sehr wichtig! Die Kombination von Working Test-driven und Teamarbeit lassen, um es zu Paar-Programmierung zu tun.
+label.AboutLine2 = Hier finden Sie noch mehr Informationen &uuml;ber uns \:
+label.SoftwareManagement = Software Management
+label.ApplicationDevBedrijfsApp = Application Entwicklung - Bedrijfsapplicaties
+label.ApplicationDevMM = Application Entwicklung - Multimedia
+label.New = New
+label.Interval = Interval
+label.Dagelijks = Dayly
+label.Wekelijks = W&ouml;chentlich
+label.OmDe2Weken = Alle zwei Wochen
+label.OmDe4Weken = Alle vier Wochen
+label.totEnMet = Untill
+label.Add = Hinzuf&uuml;gen
+label.previous = Zur&uuml;ck
+label.next = Weiter
+label.Browse = Durchsuchen
+label.ImportDateFromFacebook = Import von Daten aus facebook
+label.Colors = Farben
+
 
