--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -130,5 +130,28 @@ label.tripVisible=Trip visible in search
 label.tripAdd=Add
 label.removeSelected=Remove selected
 label.Tweet=Tweet
+label.HomeLine1=You want to organise a trip as quick and easy as possible?
+label.HomeLine2=Or are you looking for a fun trip with your friends?
+label.HomeLine3=Then this is the place you're looking for. Here you can find all kinds of fun trips. Citytrips, droppings, walking tours,.. They're easy to find and immediatly with the right info. We also offer the possibility to organise your own trip. With only a few clicks you've already got your own trip, for which you can invite all your friends.
+label.HomeLine4=During the trip, you've got the possibility to use your mobile phone to follow the right route. You can also communicate with other participants of the trip. We also provide fun interaction with photos and quiz questions.
+label.HomeLine5=Finally we make that annoying cost calculation at the end of trip alot easier by providing a service were you can enter your expenses during the trip and giving you a complete overview of you're costs at the end of the trip, so there will be no problems at the end\!
+label.AboutLine1=As senior students at Karel de Grote hogeschool we had to develop an assignment for the Software development course. We had to design a webclient and a mobile client. To complete this assignement there were a few aspects very important. We had to work test-driven, something completely new for us. Besides that, teamwork was very important! The combination of working test-driven and teamwork let to it, to do pair programming.
+label.AboutLine2=Here you can find some more information about us\:
+label.SoftwareManagement=Software Management
+label.ApplicationDevBedrijfsApp=Application development - Bedrijfsapplicaties
+label.ApplicationDevMM=Application development - Multimedia
+label.New=New
+label.Interval=Interval
+label.Dagelijks=Dayly
+label.Wekelijks=Weekly
+label.OmDe2Weken=Every two weeks
+label.OmDe4Weken=Every four weeks
+label.totEnMet=Untill
+label.Add=Add
+label.previous=Previous
+label.next=Next
+label.Browse=Browse
+label.ImportDateFromFacebook=Import data from facebook
+label.Colors=Colors
 
 
