--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -80,53 +80,76 @@ label.IndividualEquipment=Individuele benodigdheden
 label.ManageParticipants=Beheer deelnemers
 label.updateParticipant=Deelnemer wijzigen
 label.Participants=Deelnemers
-label.loginError=Login Failed
-label.invite=Invite
+label.loginError=Aanmelden mislukt
+label.invite=Nodig uit
 label.ManageStoppingPoints=Beheer stopplaatsen
 label.ReceiveNotification=Ontvang notificatie
-label.login=Please Login
+label.login=Gelieve aan te melden
 label.showMap=Toon kaart
-label.SaveSettings=Save settings
-label.ModeOfTravel=Mode of travel
-label.LocationName=Location name
-label.badMapEntry=Invalid entry\: this place doesn't excist\!
-label.Driving=Driving
-label.Walking=Walking
-label.Bicycling=Bicycling
-label.Transit=Transit
-label.information=Information
-label.goodMapEntry=Good entry, this place excists\!
-label.showRoute=Show route
-label.StoppingPointName=Stoppingpoint name
-label.StoppingPointType=Stoppingpoint type
-label.StoppingPointInfo=Stopping point info
-label.MyOrganisedTrips=My organised trips
-label.MyJoinedTrips=My joined trips
-label.FoundOnTripName=Found on trip name
-label.FoundOnTripCategory=Found on trip category
-label.Manage=Manage
-label.ManageCategories=Manage categories
-label.Background=Background
-label.FontTitle=Font title
-label.FontContent=Font content
-label.photo=Photo
-label.NoTripNamesFound=Found no trips with name
-label.NoTripCategoriesFound=Found no trips with category
-label.NoTripsAvailable=There are currently no trips in our database, feel free to add a trip\!
-label.NoOrganisedTripsAvailable=You have no organised trips\!
-label.NoParticipatedTripsAvailable=You haven't participated any trips\!
-label.LoginDataIncorrect=The login information you have given is incorrect\!
-label.YouMustBeLoggedIn=You must be logged in to visit this page
-label.NotRegistered=Not registered?
-label.RegisterHere=Register here\!
-label.Vraag=Question
-label.Antwoord=Answer
-label.CorrectAntwoord=Correct Answer
-label.Antwoorden=Answers
-label.sendMail=Send mail
-label.skipMail=Skip
-label.viewTheTrip=For more information visit the trip
-label.tripVisible=Trip visible in search
-label.tripAdd=Add
-label.removeSelected=Remove selected
+label.SaveSettings=Bewaar instellingen
+label.ModeOfTravel=Reiswijze
+label.LocationName=Locatie naam
+label.badMapEntry=Foutieve ingave\: deze plaats bestaat niet\!
+label.Driving=Auto rijden
+label.Walking=Wandelen
+label.Bicycling=Fietsen
+label.Transit=Doorreis
+label.information=Informatie
+label.goodMapEntry=Goeie ingave, de plaats bestaat\!
+label.showRoute=Toon route
+label.StoppingPointName=Stopplaats naam
+label.StoppingPointType=Stopplaats type
+label.StoppingPointInfo=Stopplaats info
+label.MyOrganisedTrips=Trips die ik georganiseerd heb
+label.MyJoinedTrips=Trips waaraan ik deelneem
+label.FoundOnTripName=Gevonden op trip naam
+label.FoundOnTripCategory=Gevonden op trip categorie
+label.Manage=Beheer
+label.ManageCategories=Beheer categorie&euml;n
+label.Background=Achtergrond
+label.FontTitle=Kleur titel
+label.FontContent=Kleur inhoud
+label.photo=Foto
+label.NoTripNamesFound=Geen trips gevonden met naam
+label.NoTripCategoriesFound=Geen trips gevonden met categorie
+label.NoTripsAvailable=Er zijn momenteel geen trips in onze databank, voel je vrij om een trip toe te voegen\!
+label.NoOrganisedTripsAvailable=Je hebt geen trips georganiseerd\!
+label.NoParticipatedTripsAvailable=Je doet momenteel geen enkel trip\!
+label.LoginDataIncorrect=De aanmeld informatie die u heeft gegeven is niet correct\!
+label.YouMustBeLoggedIn=Je moet aangemeld zijn om deze pagina te bekijken
+label.NotRegistered=Nog niet geregistreerd?
+label.RegisterHere=Registreer hier\!
+label.Vraag=Vraag
+label.Antwoord=Antwoord
+label.CorrectAntwoord=Juiste antwoord
+label.Antwoorden=Antwoorden
+label.sendMail=Verzend mail
+label.skipMail=Sla over
+label.viewTheTrip=Voor meer informatie bezoek de trip
+label.tripVisible=Trip zichtbaar voor anderen
+label.tripAdd=Voeg trip toe
+label.removeSelected=Verwijder geselecteerde
 label.Tweet=Tweet
+label.HomeLine1=Wil je een trip snel en makkelijk organiseren?
+label.HomeLine2=Of ben je opzoek naar een leuk uitstapje met vrienden?
+label.HomeLine3=Dan ben je hier op de juiste plaats. Hier kan je namelijk zoeken naar allerlei leuke trips, van stadswandelingen, droppings tot vakanties. Makkelijk op te zoeken en met onmiddelijk de juiste informatie beschikbaar. Wij bieden ook de mogelijkheid aan om je eigen trip te organiseren. Met enkele klikken heb je meteen een trip georganiseerd, waarvoor je al je vrienden kan uitnodigen.
+label.HomeLine4=Tijdens  de trip heb je dan de mogelijkheid om met je mobiele telefoon de juiste route te volgen, en kan je ook communiceren met andere die dezelfde trip afleggen. Ook voorzien wij leuke interactie, met foto's en quizvragen.
+label.HomeLine5=Tenslotte vergemakkelijken wij voor jou die toch steeds vervelende berekening van het uiteindelijke kosten plaatje. Doordat deelnemers hun uitgave doorheen de trip kunnen invoeren kan de organisator op het einde van de trip een overzicht krijgen waardoor dit onmiddellijk geregeld kan worden\!
+label.AboutLine1=Als derdejaars studenten op de Karel de Grote hogeschool hebben wij voor het vak Software development de opdracht gekregen om zowel een webclient als een mobileclient op te bouwen. Voor deze opdracht waren er enkele aspecten zeer belangrijk. We moesten test-driven te werk gaan, iets wat voor ons volledig nieuw was. Daarnaast was het ook zeer belangrijk om in teamverband te werken, hierbij en bij het test-driven werken was het ook belangrijk dat we deden aan pair programming.
+label.AboutLine2=Hier vindt u wat meer informatie over ons\:
+label.SoftwareManagement=Software Management
+label.ApplicationDevBedrijfsApp=Applicatieontwikkeling - Bedrijfsapplicaties
+label.ApplicationDevMM=Applicatieontwikkeling - Multimedia
+label.New=Nieuw
+label.Interval=Herhaling
+label.Dagelijks=Dagelijks
+label.Wekelijks=Wekelijks
+label.OmDe2Weken=Om de twee weken
+label.OmDe4Weken=Om de vier weken
+label.totEnMet=Tot en met
+label.Add=Voeg toe
+label.previous=Vorige
+label.next=Volgende
+label.Browse=Bladeren
+label.ImportDateFromFacebook=Importeer facebook gegevens
+label.Colors=Kleuren
