--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -77,56 +77,79 @@ label.DeleteUser=Supprimer l'utilisateur
 label.equipment = Groupe fournitures
 label.notification = Communication
 label.IndividualEquipment=Equipement individuel
-label.ManageParticipants=Gérer les membres
-label.updateParticipant=Update Participant
-label.Participants=Deelnemers
-label.loginError=Login Failed
-label.invite=Invite
-label.ManageStoppingPoints=Manage stopping points
-label.ReceiveNotification=Ontvang notificatie
-label.login=Please Login
-label.SaveSettings=Save settings
-label.showMap=Show map
-label.ModeOfTravel=Mode of travel
-label.LocationName=Location name
-label.badMapEntry=Invalid entry\: this place doesn't excist\!
-label.Driving=Driving
-label.Walking=Walking
-label.Bicycling=Bicycling
-label.Transit=Transit
-label.information=Information
-label.goodMapEntry=Good entry, this place excists\!
-label.showRoute=Show route
-label.StoppingPointName=Stoppingpoint name
-label.StoppingPointType=Stoppingpoint type
-label.StoppingPointInfo=Stopping point info
-label.MyOrganisedTrips=My organised trips
-label.MyJoinedTrips=My joined trips
-label.FoundOnTripName=Found on trip name
-label.FoundOnTripCategory=Found on trip category
-label.Manage=Manage
-label.ManageCategories=Manage categories
-label.photo=Photolabel.ManageCategories=Manage categories
-label.Background=Background
-label.FontTitle=Font title
-label.FontContent=Font content
-label.NoTripNamesFound=Found no trips with name
-label.NoTripCategoriesFound=Found no trips with category
-label.NoTripsAvailable=There are currently no trips in our database, feel free to add a trip\!
-label.NoOrganisedTripsAvailable=You have no organised trips\!
-label.NoParticipatedTripsAvailable=You haven't participated any trips\!
-label.LoginDataIncorrect=The login information you have given is incorrect\!
-label.YouMustBeLoggedIn=You must be logged in to visit this page
-label.NotRegistered=Not registered?
-label.RegisterHere=Register here\!
-label.sendMail=Send mail
-label.skipMail=Skip
-label.viewTheTrip=For more information visit the triplabel.RegisterHere=Register here\!
-label.Vraag=Question
-label.Antwoord=Answer
-label.CorrectAntwoord=Correct Answer
-label.Antwoorden=Answerslabel.viewTheTrip=For more information visit the trip
-label.tripVisible=Trip visible in search
-label.tripAdd=Add
-label.removeSelected=Remove selected
-label.Tweet=Tweet
+label.ManageParticipants=G&eacute;rer les membres
+
+label.updateParticipant = Mise &agrave; jour des participants
+Les participants label.Participants =
+label.loginError = &eacute;chec de la connexion
+label.invite = Inviter
+label.ManageStoppingPoints = Gestion des points d'arr&ecirc;t
+label.login = Veuillez vous connecter
+label.showMap = Voir la carte
+label.SaveSettings = Enregistrer les param&egrave;tres
+Mode = label.ModeOfTravel de voyage
+Nom label.LocationName Lieu =
+label.badMapEntry = Entr&eacute;e non valide \: cet endroit n'est \ pas excist!
+label.Driving = conduite
+label.Walking marche =
+label.Bicycling = v&eacute;lo
+label.Transit = Transit
+label.information = information
+label.goodMapEntry = Bonne entr&eacute;e, ce lieu excists \!
+label.showRoute = Afficher l'itin&eacute;raire
+label.StoppingPointName = Stoppingpoint nom
+label.StoppingPointType = Stoppingpoint type de
+label.StoppingPointInfo = info point d'arr&ecirc;t
+label.MyOrganisedTrips = Mes voyages organis&eacute;s
+label.MyJoinedTrips = Mes voyages joints
+label.FoundOnTripName = Trouv&eacute; sur le nom de voyage
+Trouv&eacute; sur label.FoundOnTripCategory = cat&eacute;gorie voyage
+label.Manage = Manage
+label.ManageCategories = G&eacute;rer les cat&eacute;gories
+label.photo = Photo
+Label.Background = Contexte
+label.FontTitle = Police du titre
+label.FontContent police content =
+Trouv&eacute; label.NoTripNamesFound = pas de d&eacute;clenchement avec le nom
+Trouv&eacute; label.NoTripCategoriesFound = pas de voyages &agrave; la cat&eacute;gorie
+= label.NoTripsAvailable Il n'y a actuellement pas de voyages dans notre base de donn&eacute;es, n'h&eacute;sitez pas &agrave; ajouter un voyage \!
+label.NoOrganisedTripsAvailable = Vous n'avez pas les voyages organis&eacute;s \!
+label.NoParticipatedTripsAvailable = Vous n'avez pas particip&eacute; tous les voyages \!
+label.LoginDataIncorrect = Les informations de connexion que vous avez donn&eacute; est \ incorrect!
+label.YouMustBeLoggedIn = Vous devez &ecirc;tre connect&eacute; pour pouvoir visiter cette page
+label.NotRegistered = Pas encore inscrit?
+Inscrivez-vous ici label.RegisterHere = \!
+label.Vraag question =
+label.Antwoord = R&eacute;ponse
+label.CorrectAntwoord = R&eacute;ponse correcte
+label.Antwoorden = R&eacute;ponses
+label.sendMail = Envoi courrier
+label.skipMail = Sauter
+= label.viewTheTrip Pour plus d'informations, visitez le voyage
+label.tripVisible de voyage = visible &agrave; la recherche
+label.tripAdd = Ajouter
+label.removeSelected = Supprimer la s&eacute;lection
+label.Tweet = Tweet
+label.HomeLine1 = Vous voulez organiser un voyage aussi rapide que possible?
+label.HomeLine2 = Ou cherchez-vous un voyage de plaisir avec vos amis?
+label.HomeLine3 = Puis c'est l'endroit que vous cherchez. Ici vous pouvez trouver toutes sortes de voyages amusants. Wallonie, les excr&eacute;ments, promenades, .. Ils sont faciles &agrave; trouver et imm&eacute;diatement avec la bonne info. Nous offrons aussi la possibilit&eacute; d'organiser votre propre voyage. Avec seulement quelques clics, vous avez d&eacute;j&agrave; votre propre voyage, pour lequel vous pouvez inviter tous vos amis.
+label.HomeLine4 = Pendant le voyage, vous avez la possibilit&eacute; d'utiliser votre t&eacute;l&eacute;phone mobile pour suivre la route &agrave; droite. Vous pouvez &eacute;galement communiquer avec les autres participants du voyage. Nous fournissons &eacute;galement une interaction ludique avec des photos et des questions de quiz.
+label.HomeLine5 = Enfin nous faisons ce calcul des coûts ennuyeux &agrave; la fin de beaucoup voyage plus facile en fournissant un service où on peut entrer vos d&eacute;penses pendant le voyage et qui vous donne un aper&ccedil;u complet des coûts vous &agrave; la fin du voyage, de sorte il n'y aura pas de probl&egrave;mes &agrave; l'\ end!
+label.AboutLine1 = Comme les &eacute;tudiants sup&eacute;rieurs &agrave; Karel de Grote Hogeschool nous avons dû d&eacute;velopper une cession au cours du d&eacute;veloppement du logiciel. Nous avons dû concevoir un webclient et un client mobile. Pour compl&eacute;ter cette assignement, il y avait quelques aspects tr&egrave;s importants. Nous avons dû travailler pilot&eacute; par les tests, quelque chose de compl&egrave;tement nouveau pour nous. En outre, le travail d'&eacute;quipe est tr&egrave;s important! La combinaison de travail pilot&eacute; par les tests et le travail d'&eacute;quipe laisse &agrave; elle, de faire la programmation en bin&ocirc;me.
+label.AboutLine2 = Ici vous pouvez trouver quelques informations suppl&eacute;mentaires &agrave; propos de nous \:
+Logiciels de gestion label.SoftwareManagement =
+label.ApplicationDevBedrijfsApp = D&eacute;veloppement d'applications - Bedrijfsapplicaties
+label.ApplicationDevMM = D&eacute;veloppement d'applications - Multim&eacute;dia
+label.New = Nouveau
+label.Interval = Intervalle
+label.Dagelijks = Quotidienne
+label.Wekelijks = hebdomadaire
+label.OmDe2Weken = Toutes les deux semaines
+label.OmDe4Weken = Toutes les quatre semaines
+Jusqu'au label.totEnMet =
+label.Add = Ajouter
+label.previous = Pr&eacute;c&eacute;dent
+label.next = Suivant
+label.Browse = Parcourir
+label.ImportDateFromFacebook = Importer des donn&eacute;es &agrave; partir de facebook
+label.Colors = Couleurs
