--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -89,13 +89,13 @@ label.showMap = Voir la carte
 label.SaveSettings = Enregistrer les param&egrave;tres
 Mode = label.ModeOfTravel de voyage
 Nom label.LocationName Lieu =
-label.badMapEntry = Entr&eacute;e non valide \: cet endroit n'est \ pas excist!
+label.badMapEntry = Entr&eacute;e non valide\: cet endroit n'est pas excist!
 label.Driving = conduite
 label.Walking marche =
 label.Bicycling = v&eacute;lo
 label.Transit = Transit
 label.information = information
-label.goodMapEntry = Bonne entr&eacute;e, ce lieu excists \!
+label.goodMapEntry = Bonne entr&eacute;e, ce lieu excists\!
 label.showRoute = Afficher l'itin&eacute;raire
 label.StoppingPointName = Stoppingpoint nom
 label.StoppingPointType = Stoppingpoint type de
@@ -103,16 +103,16 @@ label.StoppingPointInfo = info point d'arr&ecirc;t
 label.MyOrganisedTrips = Mes voyages organis&eacute;s
 label.MyJoinedTrips = Mes voyages joints
 label.FoundOnTripName = Trouv&eacute; sur le nom de voyage
-Trouv&eacute; sur label.FoundOnTripCategory = cat&eacute;gorie voyage
+label.FoundOnTripCategory = Trouv&eacute; sur cat&eacute;gorie voyage
 label.Manage = Manage
 label.ManageCategories = G&eacute;rer les cat&eacute;gories
 label.photo = Photo
 Label.Background = Contexte
 label.FontTitle = Police du titre
 label.FontContent police content =
-Trouv&eacute; label.NoTripNamesFound = pas de d&eacute;clenchement avec le nom
-Trouv&eacute; label.NoTripCategoriesFound = pas de voyages &agrave; la cat&eacute;gorie
-= label.NoTripsAvailable Il n'y a actuellement pas de voyages dans notre base de donn&eacute;es, n'h&eacute;sitez pas &agrave; ajouter un voyage \!
+label.NoTripNamesFound = Trouv&eacute; pas de d&eacute;clenchement avec le nom
+label.NoTripCategoriesFound = Trouv&eacute; pas de voyages &agrave; la cat&eacute;gorie
+label.NoTripsAvailable Il n'y a actuellement pas de voyages dans notre base de donn&eacute;es, n'h&eacute;sitez pas &agrave; ajouter un voyage \!
 label.NoOrganisedTripsAvailable = Vous n'avez pas les voyages organis&eacute;s \!
 label.NoParticipatedTripsAvailable = Vous n'avez pas particip&eacute; tous les voyages \!
 label.LoginDataIncorrect = Les informations de connexion que vous avez donn&eacute; est \ incorrect!
@@ -125,8 +125,8 @@ label.CorrectAntwoord = R&eacute;ponse correcte
 label.Antwoorden = R&eacute;ponses
 label.sendMail = Envoi courrier
 label.skipMail = Sauter
-= label.viewTheTrip Pour plus d'informations, visitez le voyage
-label.tripVisible de voyage = visible &agrave; la recherche
+label.viewTheTrip = Pour plus d'informations, visitez le voyage
+label.tripVisible = de voyage visible &agrave; la recherche
 label.tripAdd = Ajouter
 label.removeSelected = Supprimer la s&eacute;lection
 label.Tweet = Tweet
@@ -134,10 +134,10 @@ label.HomeLine1 = Vous voulez organiser un voyage aussi rapide que possible?
 label.HomeLine2 = Ou cherchez-vous un voyage de plaisir avec vos amis?
 label.HomeLine3 = Puis c'est l'endroit que vous cherchez. Ici vous pouvez trouver toutes sortes de voyages amusants. Wallonie, les excr&eacute;ments, promenades, .. Ils sont faciles &agrave; trouver et imm&eacute;diatement avec la bonne info. Nous offrons aussi la possibilit&eacute; d'organiser votre propre voyage. Avec seulement quelques clics, vous avez d&eacute;j&agrave; votre propre voyage, pour lequel vous pouvez inviter tous vos amis.
 label.HomeLine4 = Pendant le voyage, vous avez la possibilit&eacute; d'utiliser votre t&eacute;l&eacute;phone mobile pour suivre la route &agrave; droite. Vous pouvez &eacute;galement communiquer avec les autres participants du voyage. Nous fournissons &eacute;galement une interaction ludique avec des photos et des questions de quiz.
-label.HomeLine5 = Enfin nous faisons ce calcul des coûts ennuyeux &agrave; la fin de beaucoup voyage plus facile en fournissant un service où on peut entrer vos d&eacute;penses pendant le voyage et qui vous donne un aper&ccedil;u complet des coûts vous &agrave; la fin du voyage, de sorte il n'y aura pas de probl&egrave;mes &agrave; l'\ end!
-label.AboutLine1 = Comme les &eacute;tudiants sup&eacute;rieurs &agrave; Karel de Grote Hogeschool nous avons dû d&eacute;velopper une cession au cours du d&eacute;veloppement du logiciel. Nous avons dû concevoir un webclient et un client mobile. Pour compl&eacute;ter cette assignement, il y avait quelques aspects tr&egrave;s importants. Nous avons dû travailler pilot&eacute; par les tests, quelque chose de compl&egrave;tement nouveau pour nous. En outre, le travail d'&eacute;quipe est tr&egrave;s important! La combinaison de travail pilot&eacute; par les tests et le travail d'&eacute;quipe laisse &agrave; elle, de faire la programmation en bin&ocirc;me.
+label.HomeLine5 = Enfin nous faisons ce calcul des co&ucirc;ts ennuyeux &agrave; la fin de beaucoup voyage plus facile en fournissant un service où on peut entrer vos d&eacute;penses pendant le voyage et qui vous donne un aper&ccedil;u complet des co&ucirc;ts vous &agrave; la fin du voyage, de sorte il n'y aura pas de probl&egrave;mes &agrave; l'\ end!
+label.AboutLine1 = Comme les &eacute;tudiants sup&eacute;rieurs &agrave; Karel de Grote Hogeschool nous avons d&ucirc; d&eacute;velopper une cession au cours du d&eacute;veloppement du logiciel. Nous avons d&ucirc; concevoir un webclient et un client mobile. Pour compl&eacute;ter cette assignement, il y avait quelques aspects tr&egrave;s importants. Nous avons d&ucirc; travailler pilot&eacute; par les tests, quelque chose de compl&egrave;tement nouveau pour nous. En outre, le travail d'&eacute;quipe est tr&egrave;s important! La combinaison de travail pilot&eacute; par les tests et le travail d'&eacute;quipe laisse &agrave; elle, de faire la programmation en bin&ocirc;me.
 label.AboutLine2 = Ici vous pouvez trouver quelques informations suppl&eacute;mentaires &agrave; propos de nous \:
-Logiciels de gestion label.SoftwareManagement =
+label.SoftwareManagement = Logiciels de gestion
 label.ApplicationDevBedrijfsApp = D&eacute;veloppement d'applications - Bedrijfsapplicaties
 label.ApplicationDevMM = D&eacute;veloppement d'applications - Multim&eacute;dia
 label.New = Nouveau
@@ -146,7 +146,7 @@ label.Dagelijks = Quotidienne
 label.Wekelijks = hebdomadaire
 label.OmDe2Weken = Toutes les deux semaines
 label.OmDe4Weken = Toutes les quatre semaines
-Jusqu'au label.totEnMet =
+label.totEnMet = Jusqu'au
 label.Add = Ajouter
 label.previous = Pr&eacute;c&eacute;dent
 label.next = Suivant
