layout diverse jsp's + extra functionaliteit

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -153,5 +153,8 @@ label.next = Weiter
 label.Browse = Durchsuchen
 label.ImportDateFromFacebook = Import von Daten aus facebook
 label.Colors = Farben
+label.pers_equipment=Persönliche Ausrüstung
+label.invitenewparticipants=Laden Sie neue Teilnehmer
+label.p_equipment=Ausrüstung
 
 
