--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -153,5 +153,9 @@ label.next=Next
 label.Browse=Browse
 label.ImportDateFromFacebook=Import data from facebook
 label.Colors=Colors
+label.pers_equipment=Personal Equipment
+label.p_equipment=Equipment
+label.invitenewparticipants=Invite new participants
+
 
 
