--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -153,3 +153,6 @@ label.next = Suivant
 label.Browse = Parcourir
 label.ImportDateFromFacebook = Importer des donn&eacute;es &agrave; partir de facebook
 label.Colors = Couleurs
+label.pers_equipment=Matériel personnel
+label.invitenewparticipants=Inviter de nouveaux participants
+label.p_equipment=équipement
