--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -153,3 +153,6 @@ label.next=Volgende
 label.Browse=Bladeren
 label.ImportDateFromFacebook=Importeer facebook gegevens
 label.Colors=Kleuren
+label.pers_equipment=Persoonlijk materiaal
+label.invitenewparticipants=Nodig nieuwe deelnemers uit
+label.p_equipment=Materiaal
