--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -156,5 +156,6 @@ label.Colors = Farben
 label.pers_equipment=Persönliche Ausrüstung
 label.invitenewparticipants=Laden Sie neue Teilnehmer
 label.p_equipment=Ausrüstung
+label.MyKost=Verwaltungskosten
 
 
