--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -156,6 +156,7 @@ label.Colors=Colors
 label.pers_equipment=Personal Equipment
 label.p_equipment=Equipment
 label.invitenewparticipants=Invite new participants
+label.MyKost=Cost management
 
 
 
