--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -156,3 +156,4 @@ label.Colors = Couleurs
 label.pers_equipment=Matériel personnel
 label.invitenewparticipants=Inviter de nouveaux participants
 label.p_equipment=équipement
+label.MyKost=gestion de frais
