--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -156,3 +156,4 @@ label.Colors=Kleuren
 label.pers_equipment=Persoonlijk materiaal
 label.invitenewparticipants=Nodig nieuwe deelnemers uit
 label.p_equipment=Materiaal
+label.MyKost=Beheer kosten
