--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -157,5 +157,8 @@ label.pers_equipment=Persönliche Ausrüstung
 label.invitenewparticipants=Laden Sie neue Teilnehmer
 label.p_equipment=Ausrüstung
 label.MyKost=Verwaltungskosten
+label.tripTypeName1 = Timed
+ label.tripTypeName2 = Wiederholen
+ label.tripTypeName3 = L&ouml;sen
 
 
