--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -157,6 +157,9 @@ label.pers_equipment=Personal Equipment
 label.p_equipment=Equipment
 label.invitenewparticipants=Invite new participants
 label.MyKost=Cost management
+label.tripTypeName1 = Time bound
+label.tripTypeName2 = Repetitive
+label.tripTypeName3=Loose
 
 
 
