--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -157,3 +157,6 @@ label.pers_equipment=Persoonlijk materiaal
 label.invitenewparticipants=Nodig nieuwe deelnemers uit
 label.p_equipment=Materiaal
 label.MyKost=Beheer kosten
+label.tripTypeName1=Tijdsgebonden
+label.tripTypeName2=Herhalend
+label.tripTypeName3=Los
