--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -157,3 +157,6 @@ label.pers_equipment=Matériel personnel
 label.invitenewparticipants=Inviter de nouveaux participants
 label.p_equipment=équipement
 label.MyKost=gestion de frais
+label.tripTypeName1 = Temporisée
+label.tripTypeName2 = Répétition
+label.tripTypeName3 = Résolvez
