--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -158,7 +158,10 @@ label.invitenewparticipants=Laden Sie neue Teilnehmer
 label.p_equipment=Ausrüstung
 label.MyKost=Verwaltungskosten
 label.tripTypeName1 = Timed
- label.tripTypeName2 = Wiederholen
- label.tripTypeName3 = L&ouml;sen
+label.tripTypeName2 = Wiederholen
+label.tripTypeName3 = L&ouml;sen
+label.tripTypeDescription1 = Das sind Fahrten an einem bestimmten Datum / Uhrzeit oder zwischen zwei Terminen / Zeiten fortsetzen. Sie sind Single als machbar.
+label.tripTypeDescription2 = Trips zu einer repetitiven Natur (zB jeden Monat) und in diesem Fall sowohl als Set oder einzeln bearbeitet werden durch den Veranstalter.
+label.tripTypeDescription3 = Das sind keine Zeit gebunden und kann daher immer von den Teilnehmern durchgef&#252;hrt werden.
 
 
