--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -160,3 +160,6 @@ label.MyKost=Beheer kosten
 label.tripTypeName1=Tijdsgebonden
 label.tripTypeName2=Herhalend
 label.tripTypeName3=Los
+label.tripTypeDescription1=Dit zijn trips die op een bepaalde datum/tijdstip of tussen twee data / tijdstippen doorgaan. Ze zijn enkel dan uitvoerbaar.
+label.tripTypeDescription2=Trips kunnen een herhalend karakter hebben (bv. elke maand) en in dat geval zowel als reeks als individueel bewerkt worden door de organisator.
+label.tripTypeDescription3=Deze zijn niet tijdsgebonden en kunnen dus altijd uitgevoerd worden door deelnemers.
