--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -160,6 +160,9 @@ label.MyKost=Cost management
 label.tripTypeName1 = Time bound
 label.tripTypeName2 = Repetitive
 label.tripTypeName3=Loose
+label.tripTypeDescription1 = These are trips on a specific date / time or between two dates or times continue. They are single than feasible.
+label.tripTypeDescription2 = Trips to a repetitive nature (eg every month) and in that case both as a set or individually edited by the organizer.
+label.tripTypeDescription3 = These are not time bound and can therefore always be carried out by participants.
 
 
 
