--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -156,10 +156,16 @@ label.Colors = Couleurs
 label.pers_equipment=Matériel personnel
 label.invitenewparticipants=Inviter de nouveaux participants
 label.p_equipment=équipement
-label.MyKost=gestion de frais
+label.MyKost=Mon coût
 label.tripTypeName1 = Temporis&eacute;e
 label.tripTypeName2 = R&eacute;p&eacute;tition
 label.tripTypeName3 = R&eacute;solvez
 label.tripTypeDescription1 = Il s'agit de voyages &#224; une date / heure sp&#233;cifique ou entre deux dates ou heures se poursuivre. Ils sont c&#233;libataires que possible.
 label.tripTypeDescription2 = Voyages &#224; caract&#232;re r&#233;p&#233;titif (par exemple tous les mois) et dans ce cas, &#224; la fois comme un ensemble ou individuellement &#233;dit&#233; par l'organisateur.
 label.tripTypeDescription3 = Ce ne sont pas limit&#233;s dans le temps et peut donc toujours &#234;tre effectu&#233; par les participants.
+label.addKost=ajouter le coût
+label.costDescription=description
+label.costPrice=Prix
+label.costAdminTitle= administrateur Coût
+label.costTripTitle = Coût du voyage
+label.totalCost = Coût total
