--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -156,10 +156,16 @@ label.Colors=Kleuren
 label.pers_equipment=Persoonlijk materiaal
 label.invitenewparticipants=Nodig nieuwe deelnemers uit
 label.p_equipment=Materiaal
-label.MyKost=Beheer kosten
+label.MyKost=Mijn kosten
 label.tripTypeName1=Tijdsgebonden
 label.tripTypeName2=Herhalend
 label.tripTypeName3=Los
 label.tripTypeDescription1=Dit zijn trips die op een bepaalde datum/tijdstip of tussen twee data / tijdstippen doorgaan. Ze zijn enkel dan uitvoerbaar.
 label.tripTypeDescription2=Trips kunnen een herhalend karakter hebben (bv. elke maand) en in dat geval zowel als reeks als individueel bewerkt worden door de organisator.
 label.tripTypeDescription3=Deze zijn niet tijdsgebonden en kunnen dus altijd uitgevoerd worden door deelnemers.
+label.addKost=Voeg kost toe
+label.costDescription=Beschrijving
+label.costPrice=Prijs
+label.costAdminTitle=Kosten voor admin
+label.costTripTitle=Kosten voor trip
+label.totalCost=Totale kost
