cost management verbetert

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -169,5 +169,6 @@ label.costPrice=Preis
 label.costAdminTitle = Kosten Admin
 label.costTripTitle = Kosten der Reise
 label.totalCost = Gesamtkosten
+label.ManageCosts=Kosten
 
 
