--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -156,7 +156,7 @@ label.Colors=Colors
 label.pers_equipment=Personal Equipment
 label.p_equipment=Equipment
 label.invitenewparticipants=Invite new participants
-label.MyKost=My cost
+label.MyKost=My costs
 label.tripTypeName1 = Time bound
 label.tripTypeName2 = Repetitive
 label.tripTypeName3=Loose
@@ -169,6 +169,7 @@ label.costPrice=Price
 label.costAdminTitle = Cost admin
 label.costTripTitle = Cost of trip
 label.totalCost = Total cost
+label.ManageCosts=Costs
 
 
 
