--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -169,3 +169,4 @@ label.costPrice=Prijs
 label.costAdminTitle=Kosten voor admin
 label.costTripTitle=Kosten voor trip
 label.totalCost=Totale kost
+label.ManageCosts=Kosten
