--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -153,9 +153,9 @@ label.next = Weiter
 label.Browse = Durchsuchen
 label.ImportDateFromFacebook = Import von Daten aus facebook
 label.Colors = Farben
-label.pers_equipment=Persönliche Ausrüstung
+label.pers_equipment=Pers&ouml;nliche Ausr&uuml;stung
 label.invitenewparticipants=Laden Sie neue Teilnehmer
-label.p_equipment=Ausrüstung
+label.p_equipment=Ausr&uuml;stung
 label.MyKost=Meine Kosten
 label.tripTypeName1 = Timed
 label.tripTypeName2 = Wiederholen
@@ -170,5 +170,12 @@ label.costAdminTitle = Kosten Admin
 label.costTripTitle = Kosten der Reise
 label.totalCost = Gesamtkosten
 label.ManageCosts=Kosten
+label.NoCosts = Sie haben keine Reisen verbunden, so entstehen keine Kosten f&uuml;r die Verwaltung!
+label.Delete = L&#246;schen
+label.update = Update
+label.updateCost = Update Kosten
+label.CostOverview = Kosten im &#220;berblick
+label.participantName = Name des Teilnehmers
+label.totalParticipantCost = Total Teilnehmer Kosten
 
 
