--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -169,7 +169,14 @@ label.costPrice=Price
 label.costAdminTitle = Cost admin
 label.costTripTitle = Cost of trip
 label.totalCost = Total cost
-label.ManageCosts=Costs
+label.ManageCosts=Manage costs
+label.NoCosts=You haven't joined any trips, so there are no costs to manage!
+label.Delete=Delete
+label.update=Update
+label.updateCost=Update cost
+label.CostOverview=Cost overview
+label.participantName=Participant name
+label.totalParticipantCost=Total participant cost
 
 
 
