--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -156,7 +156,7 @@ label.Colors = Couleurs
 label.pers_equipment=Mat&eacute;riel personnel
 label.invitenewparticipants=Inviter de nouveaux participants
 label.p_equipment=&eacute;quipement
-label.MyKost=Mon coûts
+label.MyKost=Mon co&ucirc;ts
 label.tripTypeName1 = Temporis&eacute;e
 label.tripTypeName2 = R&eacute;p&eacute;tition
 label.tripTypeName3 = R&eacute;solvez
@@ -170,3 +170,10 @@ label.costAdminTitle= administrateur Co&ucirc;t
 label.costTripTitle = Co&ucirc;t du voyage
 label.totalCost = Co&ucirc;t total
 label.ManageCosts=Co&ucirc;ts
+label.NoCosts = Vous n'avez pas encore rejoint les voyages, donc il n'ya pas de frais de gestion!
+label.Delete = Supprimer
+label.update = Mise &#224; jour
+label.updateCost = co&#251;t mise &#224; jour
+label.CostOverview = aper&#231;u Co&#251;t
+label.participantName = Nom du participant
+label.totalParticipantCost = co&#251;t total des participants
