--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -169,4 +169,11 @@ label.costPrice=Prijs
 label.costAdminTitle=Kosten voor admin
 label.costTripTitle=Kosten voor trip
 label.totalCost=Totale kost
-label.ManageCosts=Kosten
+label.ManageCosts=Beheer kosten
+label.NoCosts=U neemt aan geen enkele trip deel, dus er zijn geen kosten om te beheren!
+label.Delete=Verwijder
+label.update=Wijzig
+label.updateCost=Wijzig kost
+label.CostOverview=Kosten overzicht
+label.participantName=Deelnemer naam
+label.totalParticipantCost=Totaal deelnemers kost
