--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -177,3 +177,7 @@ label.updateCost=Wijzig kost
 label.CostOverview=Kosten overzicht
 label.participantName=Deelnemer naam
 label.totalParticipantCost=Totaal deelnemers kost
+label.shout-saysomething=Zeg iets ...
+label.shout=Chat\!
+label.chat=Chat
+label.overview=Overzicht
