--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -177,10 +177,8 @@ label.updateCost=Update cost
 label.CostOverview=Cost overview
 label.participantName=Participant name
 label.totalParticipantCost=Total participant cost
-label.shout-saysomething=Say something ...
-label.shout=Chat\!
-label.chat=Chat
-label.overview=Overview
+label.modify=Modify
+label.contact=Contact
 
 
 
