--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -177,7 +177,5 @@ label.updateCost = co&#251;t mise &#224; jour
 label.CostOverview = aper&#231;u Co&#251;t
 label.participantName = Nom du participant
 label.totalParticipantCost = co&#251;t total des participants
-label.shout-saysomething=Dis quelque chose ...
-label.shout=Chat\!
-label.chat=Chat
-label.overview=Vue d'ensemble
+label.modify=Modify
+label.contact=Contact
