--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -177,7 +177,9 @@ label.updateCost = Update Kosten
 label.CostOverview = Kosten im &#220;berblick
 label.participantName = Name des Teilnehmers
 label.totalParticipantCost = Total Teilnehmer Kosten
-label.modify=Modify
-label.contact=Contact
+label.shout-saysomething=sagen Sie etwas ...
+label.shout=Chat\!
+label.chat=Chat
+label.overview=Überblick
 
 
