--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -177,8 +177,10 @@ label.updateCost=Update cost
 label.CostOverview=Cost overview
 label.participantName=Participant name
 label.totalParticipantCost=Total participant cost
-label.modify=Modify
-label.contact=Contact
+label.shout-saysomething=Say something ...
+label.shout=Chat\!
+label.chat=Chat
+label.overview=Overview
 
 
 
