--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -181,5 +181,8 @@ label.shout-saysomething=sagen Sie etwas ...
 label.shout=Chat\!
 label.chat=Chat
 label.overview=Überblick
+label.contact=Contact
+label.Personal=Personal
+label.modify=Modify
 
 
