--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -181,6 +181,9 @@ label.shout-saysomething=Say something ...
 label.shout=Chat\!
 label.chat=Chat
 label.overview=Overview
+label.contact=Contact
+label.Personal=Personal
+label.modify=Modify
 
 
 
