--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -181,3 +181,6 @@ label.shout-saysomething=Dis quelque chose ...
 label.shout=Chat\!
 label.chat=Chat
 label.overview=Vue d'ensemble
+label.contact=Contact
+label.Personal=Personal
+label.modify=Modify
