--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -181,3 +181,6 @@ label.shout-saysomething=Zeg iets ...
 label.shout=Chat\!
 label.chat=Chat
 label.overview=Overzicht
+label.contact=Contact
+label.Personal=Personal
+label.modify=Modify
