broadcast messages + transactional

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -184,6 +184,11 @@ label.overview=Overview
 label.contact=Contact
 label.Personal=Personal
 label.modify=Modify
+label.BroadcastMessages=Broadcast messages
+label.message=Message
+label.sendBroadcastMessage=Send broadcast message
+label.datetime=Date/time
+label.sendMessage=Send message
 
 
 
