--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -184,3 +184,8 @@ label.overview=Vue d'ensemble
 label.contact=Contact
 label.Personal=Personal
 label.modify=Modify
+label.BroadcastMessages=Broadcast messages
+label.message=Message
+label.sendBroadcastMessage=Send broadcast message
+label.datetime=Date/time
+label.sendMessage=Send message
