--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -184,5 +184,10 @@ label.overview=Überblick
 label.contact=Contact
 label.Personal=Personal
 label.modify=Modify
+label.BroadcastMessages=Broadcast messages
+label.message=Message
+label.sendBroadcastMessage=Send broadcast message
+label.datetime=Date/time
+label.sendMessage=Send message
 
 
