login after registration

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -189,5 +189,7 @@ label.message=Message
 label.sendBroadcastMessage=Send broadcast message
 label.datetime=Date/time
 label.sendMessage=Send message
+label.RegisterSuccessfull=Your registration was successful. You can now login\!
+label.Login=Login
 
 
