--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -189,6 +189,8 @@ label.message=Message
 label.sendBroadcastMessage=Send broadcast message
 label.datetime=Date/time
 label.sendMessage=Send message
+label.RegisterSuccessfull=Your registration was successful. You can now login\!
+label.Login=Login
 
 
 
