--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -189,3 +189,5 @@ label.message=Message
 label.sendBroadcastMessage=Send broadcast message
 label.datetime=Date/time
 label.sendMessage=Send message
+label.RegisterSuccessfull=Your registration was successful. You can now login\!
+label.Login=Login
